# financial-data-agents

./: .gitignore  .ruffignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/: preserve_features.md
.github/workflows/: ci.yaml
config/: general_analysis_settings.toml
config/momentum_config/: momentum_analysis_settings.toml
src/: __init__.py  cli.py  config.py  main.py
src/analysis/: __init__.py  base.py  financial_glossary.md
src/analysis/momentum/: __init__.py  momentum_analyzer.py
src/core/: __init__.py  constants.py
src/data/: __init__.py  base_client.py  clients.py  massive_client.py  yfinance_client.py
src/utils/: README.md  __init__.py  logger_util.py  worker.py
tests/: __init__.py  conftest.py  test_cli.py  test_logger_util.py
tests/analysis/momentum/: test_momentum_analyzer.py
