[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-data-agents"
version = "0.1.0"
description = "Autonomous Python agents for ETF momentum analysis using yfinance and local LLMs (Ollama)"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Peter", email = "peter.pontbriand@gmail.com"}
]
keywords = ["finance", "etf", "momentum", "yfinance", "agentic", "ollama"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "yfinance>=1.3.0",            # Latest as of April 2026
    "massive-api-client>=0.0.4",  # Modern, official library wrapper
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",          # Better plotting
    "ollama>=0.4.0",            # Official Python client for your local Ollama
    "python-dotenv>=1.0.0",     # For .env files (API keys later)
    "pydantic>=2.8.0",          # For clean data models
    "tenacity>=8.0.0",          # Retry logic for API calls
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",              # Fast linting + formatting (replaces black + isort)
    "responses>=0.25.0",        # Mock HTTP responses in tests
]

[project.scripts]
financial-data-agents = "src.cli:app"

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "D", "ANN", "B", "UP", "SIM", "RUF"] # Error, Flux, Import, Naming, Docstyle, Annotations
ignore = ["D100", "D104", "E501", "D203", "D212", "D213",  # Ignore missing docstrings in __init__.py, Line length handled by formatter
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Ignore type-check rules (ANN) and assert-check rules (S) in tests
"tests/**/*.py" = ["ANN401", "ANN001", "ANN201", "S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true  # Suppresses errors if *args and **kwargs are typed as Any
ignore-fully-untyped = false

[tool.pytest.ini_options]
minversion = "3.14"
pythonpath = "src;tests"
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
branch = true # Tracks both True and False outcomes of 'if' statements
source = ["src"]

[tool.coverage.report]
# Do not count configuration files or tests against code coverage percentages
omit = [
    "src/config.py",
    "tests/*",
]
# Highlight missing statements clearly in the terminal output
show_missing = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
python_version = "3.14"             # Match your runtime target
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true        # Force signatures to have explicit type hints
disallow_incomplete_defs = true     # Catch partial hinting
check_untyped_defs = true           # Look inside un-hinted functions
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true              # Prevent comparing unrelated types
mypy_path = "src"  # Explicitly tells mypy to resolve local imports relative to src/
explicit_package_bases = true
